# generator-angular-scotty

./: .travis.yml  README.md  package.json
app/: index.js
app/templates/: app.cabal
app/templates/public/views/home/: _home.html
app/templates/src/: _Main.hs  _Models.hs
entity/: index.js
entity/templates/public/js/entity/: _entity-controller.js  _entity-router.js
test/: test-creation.js  test-load.js
